warehouses sites added/ answers modified/ some fixing made

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">Sobre</a></li>
           <li><a class="nav-link scrollto" href="#services">Serviços</a></li>
-          <li><a class="nav-link scrollto o" href="#portfolio">Galpões</a></li>
-          <li><a class="nav-link scrollto" href="#team">Equipe</a></li>
+          <li><a class="nav-link scrollto o" href="#portfolio">Imóveis</a></li>
+          <!-- li><a class="nav-link scrollto" href="#team">Equipe</a></li -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -449,7 +449,7 @@
 
         <div class="section-title">
           <h2>Oportunidades</h2>
-          <p>Veja as oportunidades de compra e venda que podemos oferecer.</p>
+          <p>Confira os imóveis disponíveis para locação e venda.</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="150">
@@ -472,8 +472,8 @@
                 <p>Galpão</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/galpao1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Primeiro galpão"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="Detalhes do imóvel"><i class="bx bx-link"></i></a>
+                    title="Zoom"><i class="bx bx-plus"></i></a>
+                  <a href="galpao1-details.html" title="Detalhes do imóvel"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -487,8 +487,8 @@
                 <p>Galpão</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/galpao2.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Segundo galpão"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="Detalhes do Imóvel"><i class="bx bx-link"></i></a>
+                    title="Zoom"><i class="bx bx-plus"></i></a>
+                  <a href="galpao2-details.html" title="Detalhes do Imóvel"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -502,8 +502,8 @@
                 <p>Galpão</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/galpao3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Terceiro galpão"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="Detalhes do Imóvel"><i class="bx bx-link"></i></a>
+                    title="Zoom"><i class="bx bx-plus"></i></a>
+                  <a href="galpao3-details.html" title="Detalhes do Imóvel"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -517,8 +517,8 @@
                 <p>Galpão</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/banca.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Banca Santa Fé"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="Detalhes do Imóvel"><i class="bx bx-link"></i></a>
+                    title="Zoom"><i class="bx bx-plus"></i></a>
+                  <a href="banca-details.html" title="Detalhes do Imóvel"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -532,8 +532,8 @@
                 <p>Terreno</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/terreno1.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Banca Santa Fé"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="Detalhes do Imóvel"><i class="bx bx-link"></i></a>
+                    title="Zoom"><i class="bx bx-plus"></i></a>
+                  <!-- a href="portfolio-details.html" title="Detalhes do Imóvel"><i class="bx bx-link"></i></a -->
                 </div>
               </div>
             </div>
@@ -547,8 +547,8 @@
                 <p>Terreno</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/terreno2.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Banca Santa Fé"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="Detalhes do Imóvel"><i class="bx bx-link"></i></a>
+                    title="Zoom"><i class="bx bx-plus"></i></a>
+                  <!-- a href="portfolio-details.html" title="Detalhes do Imóvel"><i class="bx bx-link"></i></a -->
                 </div>
               </div>
             </div>
@@ -562,8 +562,8 @@
                 <p>Terreno</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/terreno3.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Banca Santa Fé"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="Detalhes do Imóvel"><i class="bx bx-link"></i></a>
+                    title="Zoom"><i class="bx bx-plus"></i></a>
+                  <!-- a href="portfolio-details.html" title="Detalhes do Imóvel"><i class="bx bx-link"></i></a -->
                 </div>
               </div>
             </div>
@@ -577,8 +577,8 @@
                 <p>Terreno</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/terreno5.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Banca Santa Fé"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="Detalhes do Imóvel"><i class="bx bx-link"></i></a>
+                    title="Zoom"><i class="bx bx-plus"></i></a>
+                  <!-- a href="portfolio-details.html" title="Detalhes do Imóvel"><i class="bx bx-link"></i></a -->
                 </div>
               </div>
             </div>
@@ -729,8 +729,7 @@
                 class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                 <p>
-                  Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur
-                  gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                  Além de toda a documentação cartorária, a Tecla oferece terrenos com licença ambiental.
                 </p>
               </div>
             </li>
@@ -741,9 +740,7 @@
                   class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id
-                  donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit
-                  ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                  A Tecla oferece seus lotes à venda apenas sob negociação.
                 </p>
               </div>
             </li>
@@ -754,10 +751,7 @@
                 <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum
-                  integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt.
-                  Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi
-                  quis
+                  Além de sua localização estratégica, próxima a grandes centros, rodovias e litoral, nossa área oferece diversos terrenos e galpões com pátios a preços condizentes com o mercado.
                 </p>
               </div>
             </li>
@@ -786,7 +780,7 @@
 
         <div class="container mt-5">
           <div class="row mt-5">
-            <div class="col-md-4">
+            <div class="col-md-6">
               <div class="info">
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
@@ -819,8 +813,8 @@
               <textarea id="whats-text" class="form-control" name="message" rows="2" placeholder="Mensagem"></textarea>
 
               <div class="mt-1 pull-right">
-                <button type="button" class="btn btn-light" id="whats-button"><i
-                    class="bi bi-send">Enviar</i>
+                <button type="button" class="btn btn-success" id="whats-button"><i
+                    class="bi bi-send">  Enviar</i>
                 </button>
               </div>
 
