banca text fixing

--- a/banca-details.html
+++ b/banca-details.html
@@ -91,10 +91,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Detalhes da Banca Saanta Fé</h2>
+          <h2>Detalhes da Banca Santa Fé</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Detalhes da Banca Saanta Fé</li>
+            <li>Detalhes da Banca Santa Fé</li>
           </ol>
         </div>
 
@@ -134,7 +134,7 @@
             <div class="portfolio-description">
               <h2>Banca Santa Fé</h2>
               <p>
-                Possuindo uma área aproximada de 150m² a banca é um galpão comercial, localizado em uma área estratégica, na esquina entre a rodovia e aa caminho que liga Garuva à Vila da Glória (São Francisco do Sul/SC). Atualmente o galpão é ocupado pela Banca Santa Fé, um ótimo ponto para encontro de amigos e parada para um lanche delicioso.
+                Possuindo área aproximada de 150m² a banca é um galpão comercial, localizado em uma área estratégica, na esquina entre a rodovia e o caminho que liga Garuva à Vila da Glória (São Francisco do Sul/SC). Atualmente o galpão é ocupado pela Banca Santa Fé, um ótimo ponto para encontro de amigos e parada para um lanche.
               </p>
             </div>
           </div>
