map added to index/ portfolio details links fixing/ web icons added

--- a/banca-details.html
+++ b/banca-details.html
@@ -12,7 +12,7 @@
   <meta name="author" content="Martin H. Anschau">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/tecla_psd_min.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -134,7 +134,7 @@
             <div class="portfolio-description">
               <h2>Banca Santa Fé</h2>
               <p>
-                Possuindo área aproximada de 150m² a banca é um galpão comercial, localizado em uma área estratégica, na esquina entre a rodovia e o caminho que liga Garuva à Vila da Glória (São Francisco do Sul/SC). Atualmente o galpão é ocupado pela Banca Santa Fé, um ótimo ponto para encontro de amigos e parada para um lanche.
+                Possuindo área aproximada de 150m² a banca é um galpão comercial localizado em uma área estratégica, na esquina entre a rodovia e o caminho que liga Garuva à Vila da Glória (São Francisco do Sul/SC). Atualmente o galpão é ocupado pela Banca Santa Fé, um ótimo ponto para encontro de amigos e parada para um lanche.
               </p>
             </div>
           </div>
@@ -167,9 +167,9 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Links úteis</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Sobre nós</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Serviços</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.hml">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#about">Sobre nós</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#services">Serviços</a></li>
             </ul>
           </div>
 
