--- a/index.html
+++ b/index.html
@@ -225,6 +225,36 @@
       </div>
     </section><!-- End Counts Section -->
 
+    <section id="area-image" class="area-image">
+      <div class="container" data-aos="fade-up">
+
+        <div class="row">
+
+          <div class="col-lg-6 video-box align-self-baseline" data-aos="fade-right" data-aos-delay="100">
+            <img src="assets/img/area_grv.svg-2.png" class="img-fluid" alt="Vista área do parque industrial">
+          </div>
+
+          <div class="col-lg-6 pt-3 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
+            <h3>250.000m² perfeitamente localizados.</h3>
+            <p class="fst-italic">
+              Com ampla área, nosso parque industrial oferece galpões e terrenos em um dos pontos mais estratégicos do norte de Santa Catarina.
+            </p>
+            <ul>
+              <li><i class="bx bx-check-double"></i> Área de aproximadamente 250.000m².</li>
+              <li><i class="bx bx-check-double"></i> Galpões com até 10.000m² de pátio.</li>
+              <li><i class="bx bx-check-double"></i> Galpões com docas, escritório, banheiro e pé direito alto.</li>
+              <li><i class="bx bx-check-double"></i> Terrenos planos, prontos para receberem empresas de diversos ramos.</li>
+            </ul>
+            <p>
+              Diante dessas características, fomos escolhidos para abrigar as instalações da Tenenge, empresa do grupo Odebrecht, que atualmente trabalha na construção do Terminal de Gás Sul, projeto com investimento inicial de aproximadamente R$400 milhões, que compreende um gasoduto, de mais de 32km de extensão, e offshore. 
+            </p>
+          </div>
+
+        </div>
+
+      </div>
+    </section>    
+
     <!-- ======= About Video Section =======  ** Ainda não temos vídeo **-->
     <!-- <section id="about-video" class="about-video">
       <div class="container" data-aos="fade-up">
