--- a/galpao2-details.html
+++ b/galpao2-details.html
@@ -12,7 +12,7 @@
   <meta name="author" content="Martin H. Anschau">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/tecla_psd_min.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -165,9 +165,9 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Links úteis</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Sobre nós</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Serviços</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.hml">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#about">Sobre nós</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#services">Serviços</a></li>
             </ul>
           </div>
 
