Melhorias textuais diversas.

--- a/galpao1-details.html
+++ b/galpao1-details.html
@@ -115,7 +115,7 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <div class="swiper-slide">
+                <div class=""> <!--div class="swiper-slide"></div-->
                   <img src="assets/img/portfolio/galpao1.jpeg" alt="">
                 </div>
 
@@ -136,7 +136,13 @@
             <div class="portfolio-description">
               <h2>Primeiro Galpão</h2>
               <p>
-                Dispondo de 650m² o Primeiro Galpão, terminado em 2016, possui ainda um escritório de 28m² e banheiros para abrigar empresas de diversos setores. Com um alto pé direto é possível, também, armazenar conteineres. O Galpão ainda conta com uma doca.
+                O Primeiro Galpão possui 650m² e foi concluído em 2016. Ele possui um escritório de 28m², banheiros e um alto pé direito, o que permite armazenar contêineres. O galpão também conta com uma doca, o que facilita o carregamento e descarregamento de mercadorias.
+
+                Este galpão é perfeito para empresas de diversos setores, como logística, distribuição e manufatura. Ele também é ideal para empresas que precisam de espaço para armazenar mercadorias ou equipamentos.
+                
+                O galpão está localizado em uma área conveniente, perto de rodovias e outras infraestruturas importantes. Ele também está cercado de outras empresas, o que facilita a interação e a colaboração.
+                
+                Se você está procurando um galpão espaçoso e bem localizado para sua empresa, esta estrutura é a escolha perfeita para você. Entre em contato conosco hoje para saber mais!.
               </p>
             </div>
           </div>
