--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
   <!-- another files -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
-  
+
   <!-- Google Analytics -->
   <script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    (function (c, l, a, r, i, t, y) {
+      c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+      t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+      y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
     })(window, document, "clarity", "script", "axhsmgkx58");
-</script>
+  </script>
 
   <!-- Google AdSense -->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6846999640476595"
-     crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6846999640476595"
+    crossorigin="anonymous"></script>
 </head>
 
 <!-- Template Main CSS File -->
@@ -112,7 +112,7 @@
           <figure>
             <img src="assets/img/tecla_web.png" alt="Logo Tecla" width="85%">
           </figure>
-          <h2>Instale sua empresa aqui.</h2>
+          <h2>Faça a escolha certa, instale sua empresa aqui.</h2>
         </div>
       </div>
       <div class="text-center">
@@ -168,7 +168,7 @@
 
         <div class="section-title">
           <h2>Sobre nós</h2>
-          <p>Um lugar estratégico com o tamanho que sua empresa necessita. </p>
+          <p>Um lugar estratégico com o tamanho perfeito para sua empresa.</p>
         </div>
 
         <div class="row content">
@@ -187,9 +187,9 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Fundados no final do ano de 2012, somos um parque que tem investido em infraestrutura para abrigar
-              empresas multissetoriais, galpões logísticos, instalações retroportuárias, centros de distribuição,
-              postos de combustível e restaurantes. Faça a escolha certa, instale sua empresa na Tecla!
+              Fundado em 2012, Tecla é um parque industrial que oferece tudo o que você precisa para o sucesso. 
+              Com uma localização privilegiada, infraestrutura de primeira linha e uma equipe de profissionais experientes, 
+              Tecla é o local perfeito para empresas de todos os tamanhos.
             </p>
             <a href="#" class="btn-learn-more">Saiba mais</a>
           </div>
@@ -243,30 +243,49 @@
 
         <div class="row">
 
-          <div class="col-lg-6 video-box align-self-baseline" data-aos="fade-right" data-aos-delay="100">
+          <div class="col-lg-6 " data-aos="fade-right" data-aos-delay="100" style="display: flex; align-items: center;">
             <img src="assets/img/area_grv.svg-2.png" class="img-fluid" alt="Vista área do parque industrial">
           </div>
 
           <div class="col-lg-6 pt-3 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
-            <h3>250.000m² perfeitamente localizados.</h3>
+            <h3>
+              Parque industrial com localização privilegiada.</h3>
             <p class="fst-italic">
-              Com ampla área, nosso parque industrial oferece galpões e terrenos em um dos pontos mais estratégicos do norte de Santa Catarina.
+              Nosso parque industrial está localizado no coração do norte de Santa Catarina, a apenas 6 km da rodovia
+              BR-101 e 40 km do porto de Itapoá. Com uma área de aproximadamente 360.000m², nosso parque oferece galpões
+              e terrenos para empresas de todos os portes. Além disso, nossas características incluem:
             </p>
             <ul>
-              <li><i class="bx bx-check-double"></i> Área de aproximadamente 250.000m².</li>
+              <li><i class="bx bx-check-double"></i> Área de aproximadamente 360.000m².</li>
               <li><i class="bx bx-check-double"></i> Galpões com até 10.000m² de pátio.</li>
               <li><i class="bx bx-check-double"></i> Galpões com docas, escritório, banheiro e pé direito alto.</li>
-              <li><i class="bx bx-check-double"></i> Terrenos planos, prontos para receberem empresas de diversos ramos.</li>
+              <li><i class="bx bx-check-double"></i> 6 km de distância do porto da rodovia BR-101.</li>
+              <li><i class="bx bx-check-double"></i> 40 km de distância do porto de Itapoá.</li>
+              <li><i class="bx bx-check-double"></i> 42 km de distância do aeroporto de Joinville.</li>
+              <li><i class="bx bx-check-double"></i> 85 km de distância do porto de Paranaguá.</li>
+              <li><i class="bx bx-check-double"></i> 90 km de distância do aeroporto internacional Afonso Pena
+                (Curitiba).</li>
+              <li><i class="bx bx-check-double"></i> 115 km de distância do aeroporto internacional de Navegantes.</li>
+              <li><i class="bx bx-check-double"></i> 120 km de distância do porto de Itajaí.</li>
             </ul>
             <p>
-              Diante dessas características, fomos escolhidos para abrigar as instalações da Tenenge, empresa do grupo Odebrecht, que atualmente trabalha na construção do Terminal de Gás Sul, projeto com investimento inicial de aproximadamente R$400 milhões, que compreende um gasoduto, de mais de 32km de extensão, e offshore. 
+              Em 2021, fomos escolhidos para abrigar as instalações da Tenenge, empresa do grupo Odebrecht, que
+              trabalhou na construção do Terminal de Gás Sul. Esse projeto, com investimento inicial de aproximadamente
+              R$400 milhões, compreende um gasoduto, de mais de 32km de extensão, e offshore.
+            </p>
+            <p>
+              Em 2022, adquirimos uma área de mais de 100.000m² adjacente ao nosso parque industrial. Isso nos permitirá expandir nossas instalações e oferecer mais espaço para empresas de todos os portes.
+            </p>
+            <p>
+              Se você está procurando um local estratégico para instalar sua empresa, nosso parque industrial é a
+              escolha certa! Entre em contato conosco hoje mesmo para saber mais sobre nossos espaços disponíveis.
             </p>
           </div>
 
         </div>
 
       </div>
-    </section>    
+    </section>
 
     <!-- ======= About Video Section =======  ** Ainda não temos vídeo **-->
     <!-- <section id="about-video" class="about-video">
@@ -763,16 +782,16 @@
 
         <div class="section-title">
           <h2>Dúvidas frequentes</h2>
-          <p>Para mais questionamentos, contate-nos.</p>
+          <p>Estamos sempre disponíveis para ajudá-lo.</p>
         </div>
 
         <div class="faq-list">
           <ul>
-            
+
             <li data-aos="fade-up" data-aos-delay="100">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2"
-                class="collapsed">Os terrenos possuem que tipo de licenças?<i class="bx bx-chevron-down icon-show"></i><i
-                  class="bx bx-chevron-up icon-close"></i></a>
+                class="collapsed">Os terrenos possuem que tipo de licenças?<i
+                  class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   Além de toda a documentação cartorária, a Tecla oferece terrenos com licença ambiental.
@@ -797,7 +816,8 @@
                 <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Além de sua localização estratégica, próxima a grandes centros, rodovias e litoral, nossa área oferece diversos terrenos e galpões com pátios a preços condizentes com o mercado.
+                  Além de sua localização estratégica, próxima a grandes centros, rodovias e litoral, nossa área oferece
+                  diversos terrenos e galpões com pátios a preços condizentes com o mercado.
                 </p>
               </div>
             </li>
@@ -859,23 +879,19 @@
               <textarea id="whats-text" class="form-control" name="message" rows="2" placeholder="Mensagem"></textarea>
 
               <div class="mt-1 pull-right">
-                <button type="button" class="btn btn-success" id="whats-button"><i
-                    class="bi bi-send">  Enviar</i>
+                <button type="button" class="btn btn-success" id="whats-button"><i class="bi bi-send"> Enviar</i>
                 </button>
-				
-				<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6846999640476595"
-     crossorigin="anonymous"></script>
-<!-- Bloco de anuncio -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-6846999640476595"
-     data-ad-slot="7116565354"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-            </div>
+
+                <script async
+                  src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6846999640476595"
+                  crossorigin="anonymous"></script>
+                <!-- Bloco de anuncio -->
+                <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6846999640476595"
+                  data-ad-slot="7116565354" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <script>
+                  (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+              </div>
 
               <!-- form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
