--- a/galpao2-details.html
+++ b/galpao2-details.html
@@ -115,7 +115,7 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <div class="swiper-slide">
+                <div class=""> <!--div class="swiper-slide"></div-->
                   <img src="assets/img/portfolio/galpao2.jpeg" alt="">
                 </div>
 
@@ -136,7 +136,13 @@
             <div class="portfolio-description">
               <h2>Segundo Galpão</h2>
               <p>
-                Com aproximadamente 360m² o Segundo Galpão, terminado em 2017, possui ainda uma doca terminada em nível. Com as dimensões de 15x24m, a estrutura fornece um ambiente propício para a instalação de diversos tipos de empresa.
+                O Segundo Galpão possui aproximadamente 360m² e foi concluído em 2017. Ele possui uma doca nivelada e as dimensões de 15x24m. A estrutura fornece um ambiente propício para a instalação de diversos tipos de empresa.
+
+                O galpão é perfeito para empresas que precisam de espaço para armazenar mercadorias ou equipamentos. Ele também é ideal para empresas que precisam de espaço para estacionar carros ou caminhões.
+                
+                A doca nivelada facilita o carregamento e descarregamento de mercadorias, e as dimensões do galpão podem acomodar uma variedade de tipos de empresas. O galpão também está localizado em uma área conveniente, perto de rodovias e outras infraestruturas importantes.
+                
+                Se você está procurando um galpão espaçoso e bem localizado para sua empresa, este galpão é a escolha perfeita para você. Entre em contato conosco hoje para saber mais!
               </p>
             </div>
           </div>
