--- a/galpao3-details.html
+++ b/galpao3-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Informações do Galpão 2</title>
+  <title>Informações do Galpão 3</title>
   <title>Tecla Parque Industrial</title>
   <meta content="Site sobre o parque industrial e retroportuário Tecla" name="description">
   <meta content="Tecla, Indústria, Galpão, Terreno, Santa Catarina, Brasil, Logística" name="keywords">
@@ -16,7 +16,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -29,10 +31,10 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-  
-    <!-- Google AdSense -->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6846999640476595"
-     crossorigin="anonymous"></script>
+
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6846999640476595"
+    crossorigin="anonymous"></script>
 
   <!-- =======================================================
   * Template Name: OnePage - v4.7.0
@@ -44,26 +46,26 @@
 
 <body>
 
-    <!-- ======= Header ======= -->
-    <header id="header" class="fixed-top">
-      <div class="container d-flex align-items-center justify-content-between">
-  
-  
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="index.html" class="logo"><img src="assets/img/tecla_psd_min.png" alt="" class="img-fluid">Tecla Parque
-          Industrial</a>
-  
-  
-        <nav id="navbar" class="navbar">
-          <ul>
-            <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-            <li><a class="nav-link scrollto" href="index.html#about">Sobre</a></li>
-            <li><a class="nav-link scrollto" href="index.html#services">Serviços</a></li>
-            <li><a class="nav-link scrollto o" href="index.html#portfolio">Imóveis</a></li>
-            <!-- li><a class="nav-link scrollto" href="index.html#team">Equipe</a></li -->
-            <li><a class="nav-link scrollto" href="index.html#contact">Contato</a></li>
-            <li><a class="getstarted scrollto" href="index.html#about">Sobre nós</a></li>
-            <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top">
+    <div class="container d-flex align-items-center justify-content-between">
+
+
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <a href="index.html" class="logo"><img src="assets/img/tecla_psd_min.png" alt="" class="img-fluid">Tecla Parque
+        Industrial</a>
+
+
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="index.html#about">Sobre</a></li>
+          <li><a class="nav-link scrollto" href="index.html#services">Serviços</a></li>
+          <li><a class="nav-link scrollto o" href="index.html#portfolio">Imóveis</a></li>
+          <!-- li><a class="nav-link scrollto" href="index.html#team">Equipe</a></li -->
+          <li><a class="nav-link scrollto" href="index.html#contact">Contato</a></li>
+          <li><a class="getstarted scrollto" href="index.html#about">Sobre nós</a></li>
+          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
                 <li><a href="#">Drop Down 1</a></li>
                 <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
@@ -81,12 +83,12 @@
               </ul>
             </li>
           -->
-          </ul>
-          <i class="bi bi-list mobile-nav-toggle"></i>
-        </nav><!-- .navbar -->
-  
-      </div>
-    </header><!-- End Header -->
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+
+    </div>
+  </header><!-- End Header -->
 
   <main id="main">
 
@@ -115,7 +117,7 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <div class="swiper-slide">
+                <div class=""> <!--div class="swiper-slide"></div-->
                   <img src="assets/img/portfolio/galpao3.jpg" alt="">
                 </div>
 
@@ -136,7 +138,12 @@
             <div class="portfolio-description">
               <h2>Terceiro Galpão</h2>
               <p>
-                Possuindo uma área 500m² o Terceiro Galpão, terminado em 2022, possui ainda banheiro interno e pátio de aproximadamente 10.000m². 
+                O Terceiro Galpão possui uma área de 500m² e foi concluído em 2022. Ele possui um banheiro interno e um
+                pátio de aproximadamente 10.000m². O galpão é perfeito para empresas que precisam de espaço para
+                armazenar mercadorias ou equipamentos. Ele também é ideal para empresas que precisam de espaço para
+                estacionar carros ou caminhões.
+
+                Entre em contato conosco hoje para saber mais sobre o galpão.
               </p>
             </div>
           </div>
@@ -224,7 +231,8 @@
   </footer><!-- End Footer -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
